tests/errors/capture/unbound.ark
(mut d (fun (&d) (print d)))